feat: openapi docs for posts
